# OptaFly_Zed

./: .gitignore  BUILD_INSTRUCTIONS.md  BURN_LM_MISTRAL_INTEGRATION_STRATEGY.md  CHANGELOG.md  Cargo.toml  IMPLEMENTATION_SUMMARY.txt  INSTALL.md  INSTALL_SCRIPTS.md  JNI_BRIDGE_SUMMARY.md  LICENSE.md  LIFECYCLE_MANAGEMENT_ARCHITECTURE.md  OPTACORE_IMPLEMENTATION_ROADMAP.md  OPTACORE_PROGRESS.md  PHASE25_PARALLEL_INSTALL.md  PHASE_2.5_COMPLETE.md  PHASE_2A_EXTENDED_OPTACORE_INTEGRATION.md  PHASE_2A_IMPLEMENTATION_SUMMARY.md  PHASE_2B_IMPLEMENTATION_PLAN.md  PHASE_2C_ASSESSMENT.md  PROMPT_MANAGEMENT_AGENT_ARCHITECTURE.md  PUBLIC_RELEASE_SUMMARY.md  README.md  RELEASE_v1.0.0_SUMMARY.md  REPOSITORY_STATUS.md  WIDGET_LOG_INTEGRATION.md  WIDGET_LOG_INTEGRATION_NOTE.md  WIDGET_LOG_NATIVE_INTEGRATION_PLAN.md  install-macos-v1.0.0.sh  install-macos.sh  install-parallel.sh  install-phase25-parallel.sh  install-windows-v1.0.0.ps1  install.sh
.cargo/: config.toml
Temp-API-Key/: setup_zed_anthropic.sh
crates/burn_lm_router/: Cargo.toml
crates/burn_lm_router/src/: cache_anchor.rs  lib.rs  network.rs  routing.rs  token_optimizer.rs
crates/optacore_jni/: Cargo.toml  QUICKSTART.md  README.md  ROADMAP.md  build.rs
crates/optacore_jni/java/com/optafly/structurizr/: OptaCoreJNI.java  OptaFlyPlugin.java
crates/optacore_jni/src/: lib.rs
crates/optacore_struct/: Cargo.toml  INTEGRATION_ROADMAP.md  PHASE_2.5_SUMMARY.md
crates/optacore_struct/examples/: telemetry_demo.rs  visualize.rs
crates/optacore_struct/src/: anti_patterns.rs  integration_tests.rs  lib.rs  model.rs  optimizer.rs  parser.rs  telemetry.rs  viz.rs  wasm.rs
crates/prompt_management_agent/: Cargo.toml
crates/prompt_management_agent/src/: context.rs  inference.rs  lib.rs  refinement.rs  user_interaction.rs
crates/pyo3_bridge/: Cargo.toml
crates/pyo3_bridge/src/: bridge.rs  conversions.rs  lib.rs  telemetry.rs  types.rs
crates/widget_log_integration/: Cargo.toml
crates/widget_log_integration/src/: config.rs  integrated_config.rs  lib.rs  lifecycle.rs  prompt_manager.rs  zed_config.rs
crates/zed/: Cargo.toml
docs/: BLOG_POST_PHASE_2.5.md  LESSONS_LEARNED_PARALLEL_INSTALL.md  PARALLEL_INSTALL_LINUX.md  RELEASE_CRITERIA.md
resources/widget-log-defaults/: config.yaml
