[package]
name = "widget_log_integration"
version = "0.1.0"
edition = "2021"
authors = ["Optaquan"]
description = "Native Widget-Log semantic caching integration for OptaFly_Zed"
license = "MIT OR Apache-2.0"

[dependencies]
tokio = { version = "1.40", features = ["process", "fs", "time", "rt"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
dirs = "5.0"
reqwest = { version = "0.11", features = ["json"] }
log = "0.4"
rand = "0.8"
base64 = "0.21"
chrono = "0.4"

# New multi-agent system dependencies
prompt_management_agent = { path = "../prompt_management_agent" }
pyo3_bridge = { path = "../pyo3_bridge" }
burn_lm_router = { path = "../burn_lm_router" }
